fixed shop page, products were not wrapping to the next line

--- a/app/scss/_parts/_shop/_shop-content.scss
+++ b/app/scss/_parts/_shop/_shop-content.scss
@@ -82,7 +82,10 @@
   }
 
   &__item{
-    flex: 0 1 calc(33.3% - 2.25%);
+    flex-basis:calc(33.3% - 2.25%);
+    @include r($r-md){
+      flex-basis: 370px;
+    }
   }
 
 }
